@@ -31,7 +31,7 @@ namespace PPL = Parma_Polyhedra_Library;
 
 PPL::Integer* PPL::tmp_Integer;
 
-const PPL::Throwable* volatile PPL::abandon_exponential_computations = 0;
+const PPL::Throwable* volatile PPL::abandon_expensive_computations = 0;
 
 
 /*! \relates Parma_Polyhedra_Library::Row */
